# pyterrier-caching

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: push.yml  style.yml  test.yml
examples/: indexer_splade.py  retriever_bm25.py  scorer_monot5.py
pyterrier_caching/: __init__.py  builder.py  dbm_sqlite3.py  indexer_cache.py  key_value_cache.py  retriever_cache.py  scorer_cache.py  util.py
pyterrier_caching/pt_docs/: extras.rst  index.rst  indexer-cache.rst  retriever-cache.rst  scorer-cache.rst
test/: test_indexer_cache.py  test_retriever_cache.py  test_scorer_cache.py
tests/: test_key_value_cache.py  test_retriever_cache.py  test_scorer_cache.py
